maquetacion paginas.html

--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Shop</title>
 </head>
-
 <body>
     <!-- Nav -->
     <nav>
@@ -15,17 +14,18 @@
         </div>
         <div>
             <ul type="none">
-                <li><a href="">Principal</a></li>
-                <li><a href="">Tienda</a></li>
-                <li><a href="">Foro</a></li>
-                <li><a href="">Ayuda</a></li>
+                <li><a href="./home.html">Principal</a></li>
+                <li><a href="./store.html">Tienda</a></li>
+                <li><a href="./foro.html">Foro</a></li>
+                <li><a href="./news.html">Noticias</a></li>
+                <li><a href="./contact.html">Ayuda</a></li>
 
             </ul>
         </div>
         <div>
             <ul type="none">
-                <li><a href=""><img src="./images/design/carrito.png" alt="carrito de compras"></a></li>
-                <li><a href=""><img src="./images/design/Icono Usuario.png" alt="icono de usuario"></a></li>
+                <li><a href="./cart.html"><img src="./images/design/carrito.png" alt="carrito de compras"></a></li>
+                <li><a href="./register.html"><img src="./images/design/Icono Usuario.png" alt="icono de usuario"></a></li>
             </ul>
         </div>
     </nav>
@@ -35,16 +35,16 @@
             <h2>Destacados</h2>
             <section>
                 <h3>Accesorios de PC</h3>
-                <article>
-                    <img src="public/images/productos/Funda Para Notebook Gadnic.jpg"
+                <a href="./productDetail.html"><article>
+                    <img src="./images/products/Funda Para Notebook Gadnic.jpg"
                         alt="Funda Estuche Para Notebook Gadnic 14 Pulgadas Color Negro">
                     <div>
                         <h4>Funda Estuche Para Notebook Gadnic 14 Pulgadas Color Negro</h4>
                         <h5>$13.999</h5>
                     </div>
-                </article>
+                </article></a>
                 <article>
-                    <img src="public/images/productos/Mesa Notebook.jpg"
+                    <img src="./images/products/Mesa Notebook.jpg"
                         alt="Mesa Notebook Laptop Soporte Plegable Regulable Cama Skyway Color Negra">
                     <div>
                         <h4>Mesa Notebook Laptop Soporte Plegable Regulable Cama Skyway Color Negra</h4>
@@ -52,7 +52,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="public/images/productos/Monitor Gamer Daewoo.jpg"
+                    <img src="./images/products/Monitor Gamer Daewoo.jpg"
                         alt="Monitor Gamer 24 Daewoo Ips 165hz 1ms Full Hd Gm2422ki">
                     <div>
                         <h4>Monitor Gamer 24 Daewoo Ips 165hz 1ms Full Hd Gm2422ki</h4>
@@ -60,7 +60,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="public/images/productos/Mouse inalambrico logitech.png"
+                    <img src="./images/products/Mouse inalambrico logitech.png"
                         alt="Mouse Inalámbrico M280 Logitech Color Negro">
                     <div>
                         <h4>Mouse Inalámbrico M280 Logitech Color Negro</h4>
@@ -71,7 +71,7 @@
             <section>
                 <h3>Componentes de PC</h3>
                 <article>
-                    <img src="public/images/productos/Disco Solido SSD 2TB Kingston.jpg"
+                    <img src="./images/products/Disco Solido SSD 2TB Kingston.jpg"
                         alt="SSD Kingston NV3 2TB PCIe 4.0 NVMe">
                     <div>
                         <h4>SSD Kingston NV3 2TB PCIe 4.0 NVMe</h4>
@@ -79,7 +79,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="public/images/productos/Memoria Ram Kingston 8GB.jpg"
+                    <img src="./images/products/Memoria Ram Kingston 8GB.jpg"
                         alt="Memoria RAM Fury Beast DDR4 gamer color negro 8GB 1 Kingston KF432C16BB/8">
                     <div>
                         <h4>Memoria RAM Fury Beast DDR4 gamer color negro 8GB 1 Kingston KF432C16BB/8</h4>
@@ -87,7 +87,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="public/images/productos/Micro AMD Ryzen 5 4600G.jpg"
+                    <img src="./images/products/Micro AMD Ryzen 5 4600G.jpg"
                         alt="Microprocesador Pc Amd Ryzen 5 4600g 8mb 3.7ghz Socket Am4 100-100000147box 6 Nucleos 12 Hilos">
                     <div>
                         <h4>Microprocesador Pc Amd Ryzen 5 4600g 8mb 3.7ghz Socket Am4 100-100000147box 6 Nucleos 12
@@ -96,7 +96,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="public/images/productos/Placa de Video MSI Nvidia Geforce RTX 4060.jpg"
+                    <img src="./images/products/Placa de Video MSI Nvidia Geforce RTX 4060.jpg"
                         alt="Msi Geforce Rtx 4060 Ventus 2x 8gb Gddr6">
                     <div>
                         <h4>Msi Geforce Rtx 4060 Ventus 2x 8gb Gddr6</h4>
@@ -107,7 +107,7 @@
             <section>
                 <h3>Camaras y microfonos</h3>
                 <article>
-                    <img src="public/images/productos/Cámara web Logitech C922 Pro.png"
+                    <img src="./images/products/Cámara web Logitech C922 Pro.png"
                         alt="Cámara web Logitech C922 Pro Full HD 30FPS color negro">
                     <div>
                         <h4>Cámara web Logitech C922 Pro Full HD 30FPS color negro</h4>
@@ -115,7 +115,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="public/images/productos/Estabilizador Para Celular.png"
+                    <img src="./images/products/Estabilizador Para Celular.png"
                         alt="Estabilizador Para Celular C/ Luz Microfono Y Control Remoto Color Negro">
                     <div>
                         <h4>Estabilizador Para Celular C/ Luz Microfono Y Control Remoto Color Negro</h4>
@@ -123,7 +123,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="public/images/productos/Camara Web VStarcam.png"
+                    <img src="./images/products/Camara Web VStarcam.png"
                         alt="Webcam Camara Web VStarcam CU1 Para Pc Usb Hd 1080p Con Microfono Color Negro">
                     <div>
                         <h4>Webcam Camara Web VStarcam CU1 Para Pc Usb Hd 1080p Con Microfono Color Negro</h4>
@@ -131,7 +131,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="public/images/productos/Kit 2 Microfonos Inalambricos Boya.png"
+                    <img src="./images/products/Kit 2 Microfonos Inalambricos Boya.png"
                         alt="Kit 2 Microfonos Inalambricos Boya By-v20 2.4ghz Usb Tipo C Color Negro">
                     <div>
                         <h4>Kit 2 Microfonos Inalambricos Boya By-v20 2.4ghz Usb Tipo C Color Negro</h4>
@@ -182,5 +182,4 @@
         </div>
     </footer>
 </body>
-
 </html>
